# ritual

./: Cargo.toml  README.md  go.mod  main.go
src/: main.rs
