[package]
name = "ritual"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
serde_json = "1.0"
wire = { git = "https://github.com/jtan2231/wire.git" }
scribe = { git = "https://github.com/JTan2231/scribe.git" }
